--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,9 @@
 <div class="footer">
-    <p jhiTranslate="footer">This is your footer</p>
+    <!--<p jhiTranslate="footer">This is your footer</p>-->
+    <p>
+        El 6 de marzo de 2007 el Banco Central de Venezuela y el Poder Ejecutivo de la República aprobaron una reconversión monetaria
+        que entró en vigencia el 1 de enero de 2008 con la publicación en la gaceta oficial N° 38.638 por iniciativa del
+        presidente Hugo Chávez tras alcanzar altos niveles de devaluación que marcó el tipo de cambio hasta Bs. 4254,11 por
+        dólar estadounidense.
+    </p>
 </div>
