Creo que ahora si conseguí el tag

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -59,14 +59,18 @@
                 <button type="submit" [disabled]="editForm.form.invalid || isSearching" class="btn btn-primary">
             <span class="fa fa-save"></span>&nbsp;<span jhiTranslate="entity.action.search">Buscar</span>
         </button>
-                <br>
-
-                <br>
-                <p *ngIf="latestExchangeRate?.date"> Ultima fecha disponible en el sistema: {{latestExchangeRate.date | date:'shortDate'}}, Tasa: {{latestExchangeRate.conversionvalue
-                    | number}} BsF </p>
-                <p *ngIf="firstExchangeRate?.date"> Primera fecha disponible en el sistema: {{firstExchangeRate.date | date:'shortDate'}}, Tasa: {{firstExchangeRate.conversionvalue
-                    | number}} BsF </p>
-                <br>
-
+            </form>
+            <br>
         </div>
+        <br>
+        <p *ngIf="latestExchangeRate?.date"> Ultima fecha disponible en el sistema: {{latestExchangeRate.date | date:'shortDate'}}, Tasa: {{latestExchangeRate.conversionvalue
+            | number}} BsF </p>
+        <p *ngIf="firstExchangeRate?.date"> Primera fecha disponible en el sistema: {{firstExchangeRate.date | date:'shortDate'}}, Tasa: {{firstExchangeRate.conversionvalue
+            | number}} BsF </p>
+        <br>
+
+
+
     </div>
+</div>
+</div>
